--- a/src/app/scss/global.scss
+++ b/src/app/scss/global.scss
@@ -1,3 +1,15 @@
-body {
+* {
   -webkit-font-smooth: antialiased;
+  box-sizing: border-box;
+}
+
+h1 {
+  color: #aaa;
+  font-weight: lighter;
+  font-size: 2rem;
+  margin: 0;
+}
+
+#mount {
+  position: relative;
 }
